fix(tk 39): apply spacing to all other about pages

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -13,13 +13,13 @@
     color: var(--primary-gold);
 }
 
-p, h1, h2, h3, h4 {
+p, h1, h2, h3, h4, h5, ul {
     font-family: var(--ss-font), sans-serif;
     color: var(--primary-blue);
     margin-bottom: 2rem;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5 {
     text-transform: uppercase;
     font-weight: bolder;
 }
@@ -50,6 +50,14 @@ h4 {
     line-height: 1.1;
     letter-spacing: 1px;
 }
+
+ /* this will need some additional work to play nicely with styling from custom.css */
+/* h5 {
+    font-size: 1rem;
+    line-height: 1.1;
+    letter-spacing: 1px;
+    margin-bottom: unset;
+} */
 
 .std-bottom-space {
     margin-bottom: 2rem;
