--- a/src/components/homepage/GradientBox.css
+++ b/src/components/homepage/GradientBox.css
@@ -15,7 +15,6 @@
     linear-gradient(45deg, var(--primary-blue) 0%, transparent 100%),
     linear-gradient(225deg, var(--primary-blue) 0%, transparent 100%);
   padding: 15px 30px;
-  margin: 20px 0 !important;
   width: 100%;
   display: flex;
   align-items: center;
